[gd_scene load_steps=26 format=2]

[ext_resource path="res://entities/coding/CodeGUI.gd" type="Script" id=1]
[ext_resource path="res://entities/coding/ScriptEditor.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/coding_theme.tres" type="Theme" id=3]
[ext_resource path="res://entities/coding/ScriptTextEdit.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/default.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/icons/add.svg" type="Texture" id=6]
[ext_resource path="res://assets/fonts/default_medium.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/themes/button_theme.tres" type="Theme" id=8]
[ext_resource path="res://entities/coding/DialogBg.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/Hack_Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/icons/check.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/loading.png" type="Texture" id=12]
[ext_resource path="res://assets/icons/ic_circle_black.png" type="Texture" id=13]
[ext_resource path="res://entities/coding/SyntaxSheet.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 10 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Code" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="CodingGUI" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CodingGUI/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 1064.0
custom_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI/MarginContainer/VBoxContainer"]
margin_right = 1888.0
margin_bottom = 72.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 16.0
margin_right = 1872.0
margin_bottom = 56.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="CodingGUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 390.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "Programming Interface"

[node name="ConnexionStatus" type="TextureRect" parent="CodingGUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 406.0
margin_top = 4.0
margin_right = 438.0
margin_bottom = 36.0
hint_tooltip = "Not connected to the remote server"
size_flags_vertical = 4
texture = ExtResource( 13 )

[node name="Control" type="Control" parent="CodingGUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 406.0
margin_right = 1773.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="ApplyButton" type="Button" parent="CodingGUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1789.0
margin_right = 1872.0
margin_bottom = 40.0
text = "Apply"
flat = true

[node name="HSplitContainer" type="HSplitContainer" parent="CodingGUI/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1888.0
margin_bottom = 1048.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 350.0
margin_bottom = 960.0
rect_min_size = Vector2( 350, 0 )
custom_constants/separation = 16

[node name="TabContainer" type="TabContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 472.0
size_flags_vertical = 3
tab_align = 0

[node name="Objects" type="Tabs" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 39.0

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer/Objects"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer/Objects/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 342.0
margin_bottom = 425.0

[node name="HBoxContainer" type="HBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer/Objects/MarginContainer/VBoxContainer"]
margin_right = 334.0
margin_bottom = 37.0

[node name="NewObjectButton" type="Button" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer/Objects/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 181.0
margin_bottom = 37.0
custom_constants/hseparation = 8
text = "New Object"
icon = ExtResource( 6 )
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer/Objects/MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 334.0
margin_bottom = 417.0
size_flags_vertical = 3
custom_styles/bg = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsContainer" type="VBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer/Objects/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 334.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer2" type="TabContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_top = 488.0
margin_right = 350.0
margin_bottom = 960.0
size_flags_vertical = 3
tab_align = 0

[node name="Methods" type="Tabs" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 39.0

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer2/Methods"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer2/Methods/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 342.0
margin_bottom = 425.0
custom_styles/bg = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MethodContainer" type="VBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer2/Methods/MarginContainer/ScrollContainer"]
margin_right = 334.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 362.0
margin_right = 1888.0
margin_bottom = 960.0
tab_align = 0

[node name="Code" type="Tabs" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 39.0

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Control" type="Control" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1518.0
margin_bottom = 913.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Click on an object to open its code"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptEditor" type="VBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor"]
margin_right = 1510.0
margin_bottom = 53.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1502.0
margin_bottom = 45.0
custom_constants/separation = 8

[node name="EditMenu" type="MenuButton" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/MarginContainer/HBoxContainer"]
margin_right = 61.0
margin_bottom = 37.0
text = "Edit"
items = [ "Undo", null, 0, false, false, 0, 0, null, "", false, "Redo", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Cut", null, 0, false, false, 3, 0, null, "", false, "Copy", null, 0, false, false, 4, 0, null, "", false, "Paste", null, 0, false, false, 5, 0, null, "", false ]
switch_on_hover = true

[node name="InsertMenu" type="MenuButton" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/MarginContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 152.0
margin_bottom = 37.0
focus_mode = 2
text = "Insert"
items = [ "Basic", null, 0, false, false, 0, 0, null, "", true, "Function", null, 0, false, false, 1, 0, null, "", false, "Variable", null, 0, false, false, 2, 0, null, "", false, "Constant", null, 0, false, false, 3, 0, null, "", false, "Conditions", null, 0, false, false, 4, 0, null, "", true, "If", null, 0, false, false, 5, 0, null, "", false, "If / else", null, 0, false, false, 6, 0, null, "", false, "If / elif / else", null, 0, false, false, 7, 0, null, "", false, "Match (Switch)", null, 0, false, false, 8, 0, null, "", false, "Loops", null, 0, false, false, 9, 0, null, "", true, "For (Range)", null, 0, false, false, 10, 0, null, "", false, "For (Array)", null, 0, false, false, 11, 0, null, "", false, "While", null, 0, false, false, 12, 0, null, "", false, "Objects", null, 0, false, false, 13, 0, null, "", true ]
switch_on_hover = true

[node name="HelpMenu" type="MenuButton" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/MarginContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 229.0
margin_bottom = 37.0
text = "Help"
items = [ "Language", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="Label" type="Control" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/MarginContainer/HBoxContainer"]
margin_left = 237.0
margin_right = 1404.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/MarginContainer/HBoxContainer"]
margin_left = 1412.0
margin_right = 1494.0
margin_bottom = 37.0
text = "Reset"
flat = true

[node name="ScriptTextEdit" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor" instance=ExtResource( 4 )]
margin_top = 57.0
margin_right = 1510.0
margin_bottom = 865.0
caret_blink = true

[node name="SaveTimer" type="Timer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor"]
one_shot = true

[node name="Parser" type="MarginContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor"]
margin_top = 869.0
margin_right = 1510.0
margin_bottom = 905.0
custom_constants/margin_top = 4

[node name="HBox" type="HBoxContainer" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/Parser"]
margin_top = 4.0
margin_right = 1510.0
margin_bottom = 36.0
size_flags_vertical = 0
custom_constants/separation = 8

[node name="ParserIcon" type="TextureRect" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/Parser/HBox"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 11 )

[node name="ParserText" type="RichTextLabel" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/Parser/HBox"]
margin_left = 40.0
margin_top = 1.0
margin_right = 1470.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/default_color = Color( 0.372549, 1, 0.592157, 1 )
custom_fonts/normal_font = SubResource( 9 )
fit_content_height = true

[node name="Loading" type="Control" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/Parser/HBox"]
margin_left = 1478.0
margin_right = 1510.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/Parser/HBox/Loading"]
frames = SubResource( 18 )
playing = true
centered = false

[node name="DialogBg" type="ColorRect" parent="CodingGUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 9 )

[node name="NewObjectDialog" type="WindowDialog" parent="CodingGUI"]
margin_right = 631.0
margin_bottom = 416.0
window_title = "New Object"

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI/NewObjectDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 64
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CodingGUI/NewObjectDialog/MarginContainer"]
margin_left = 16.0
margin_top = 64.0
margin_right = 615.0
margin_bottom = 400.0
custom_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CodingGUI/NewObjectDialog/MarginContainer/VBoxContainer"]
margin_right = 599.0
margin_bottom = 31.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="CodingGUI/NewObjectDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 166.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 7 )
text = "Object name:"

[node name="NewObjectNameLabel" type="LineEdit" parent="CodingGUI/NewObjectDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 599.0
margin_bottom = 31.0
size_flags_horizontal = 3
caret_blink = true

[node name="Label" type="Label" parent="CodingGUI/NewObjectDialog/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 599.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 7 )
text = "Description:"

[node name="NewObjectDescriptionLabel" type="TextEdit" parent="CodingGUI/NewObjectDialog/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 599.0
margin_bottom = 289.0
size_flags_vertical = 3

[node name="CreateObjectButton" type="Button" parent="CodingGUI/NewObjectDialog/MarginContainer/VBoxContainer"]
margin_top = 305.0
margin_right = 599.0
margin_bottom = 336.0
theme = ExtResource( 8 )
text = "Create"

[node name="RenameObjectDialog" type="WindowDialog" parent="CodingGUI"]
margin_right = 631.0
margin_bottom = 162.0
window_title = "Rename Object"

[node name="MarginContainer" type="MarginContainer" parent="CodingGUI/RenameObjectDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 64
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CodingGUI/RenameObjectDialog/MarginContainer"]
margin_left = 16.0
margin_top = 64.0
margin_right = 615.0
margin_bottom = 146.0
custom_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CodingGUI/RenameObjectDialog/MarginContainer/VBoxContainer"]
margin_right = 599.0
margin_bottom = 31.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="CodingGUI/RenameObjectDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 7 )
text = "New name:"

[node name="RenameLineEdit" type="LineEdit" parent="CodingGUI/RenameObjectDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 599.0
margin_bottom = 31.0
size_flags_horizontal = 3
caret_blink = true

[node name="RenameObjectButton" type="Button" parent="CodingGUI/RenameObjectDialog/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 599.0
margin_bottom = 78.0
theme = ExtResource( 8 )
text = "Rename"

[node name="SyntaxSheet" parent="CodingGUI" instance=ExtResource( 14 )]

[connection signal="pressed" from="CodingGUI/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/TabContainer/Objects/MarginContainer/VBoxContainer/HBoxContainer/NewObjectButton" to="." method="_on_NewObjectButton_pressed"]
[connection signal="help_syntax" from="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor" to="." method="_on_ScriptEditor_help_syntax"]
[connection signal="button_up" from="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/MarginContainer/HBoxContainer/ResetButton" to="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor" method="_on_ResetButton_button_up"]
[connection signal="text_changed" from="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/ScriptTextEdit" to="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor" method="_on_ScriptTextEdit_text_changed"]
[connection signal="timeout" from="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor/SaveTimer" to="CodingGUI/MarginContainer/VBoxContainer/HSplitContainer/TabContainer/Code/MarginContainer/Control/ScriptEditor" method="_on_SaveTimer_timeout"]
[connection signal="gui_input" from="CodingGUI/DialogBg" to="CodingGUI/DialogBg" method="_on_DialogBg_gui_input"]
[connection signal="pressed" from="CodingGUI/NewObjectDialog/MarginContainer/VBoxContainer/CreateObjectButton" to="." method="_on_CreateObjectButton_pressed"]
[connection signal="pressed" from="CodingGUI/RenameObjectDialog/MarginContainer/VBoxContainer/RenameObjectButton" to="." method="_on_RenameObjectButton_pressed"]
